# Snake

./: .gitignore  ML presentation.pptx  README.md  Snake game.pptx
Core/: Core.sln
Core/Core/: Core.csproj  Game.cs  GameState.cs  MLP.cs  NativeMLP.cs  Recorder.cs  Snake.cs  Vector2Int.cs
Data/: game-data-Romain.csv
ML_lib/: CMakeLists.txt  LinearModel.cpp  LinearModel.h  LinearModel.hpp  MLP.cpp  MLP.hpp  PerceptronClassifier.cpp  PerceptronClassifier.hpp  library.cpp  library.hpp  main.cpp  main.hpp
Model training/: Cas de tests - MLP.ipynb  Cas de tests - Modèles Linéaires.ipynb
PowerPoint Presentation/: Snake game.pptx
python-test-folder/: Cas de tests - MLP.ipynb  Game Model Training.ipynb  MLP - Game Model Training.ipynb  MLP.ipynb  ML_lib.py  Modèle linéaire - Game Model Training.ipynb  [Notebook] Cas de tests.ipynb  test.ipynb
snake-cmd-visual/: GameManager.cs  main.cs  snake-cmd-visual.csproj  snake-cmd-visual.sln
snake-godot-visual/: .gitignore  Snake.csproj  Snake.sln  export_presets.cfg  project.godot
snake-godot-visual/player-data/: game-data.BottWallDist.translation  game-data.LeftWallDist.translation  game-data.RightWallDist.translation  game-data.UpWallDist.translation  game-data.X0.translation  game-data.X1.translation  game-data.X10.translation  game-data.X100.translation  game-data.X101.translation  game-data.X102.translation  game-data.X103.translation  game-data.X104.translation  game-data.X105.translation  game-data.X106.translation  game-data.X107.translation  game-data.X108.translation  game-data.X109.translation  (+509 more)
(+20 files in other folders)
